@@ -1,5 +1,10 @@
 2003-11-09  Keith Packard  <keithp@keithp.com>
 
+	* xcompmgr.c: (root_tile), (paint_root):
+	Detect root pattern with undocumented _XROOTPMAP_ID property
+
+2003-11-09  Keith Packard  <keithp@keithp.com>
+
 	* Makefile:
 	* xcompmgr.c: (gaussian), (make_gaussian_map), (sum_gaussian),
 	(make_shadow), (shadow_picture), (win_extents), (paint_all),
